--- a/template/dl.html
+++ b/template/dl.html
@@ -1,3 +1,5 @@
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
 
 
 <!DOCTYPE html>
@@ -6,140 +8,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Watch and download movies online with ease using RIYA 2.0 streaming service.">
     <title>{{file_name}}</title>
-    
-    <!-- External Stylesheets -->
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://aeditx03.github.io/resources/StreamCSS.css">
     <link rel="stylesheet" href="https://aeditx03.github.io/resources/playerCss.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
-          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
-          crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;700&display=swap" rel="stylesheet">
-    
-    <!-- TailwindCSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
 
 <body>
     <nav>
         <div class="nleft">
             <a href="https://t.me/SpeedMovies_bot">
-                <h4 id="heading" class="magnet">RIYA 2.0</h4>
+                <!-- if u are trying to change the header name please remove the title text from bottom line  -->
+                <h4 id="heading" style="z-index: 100;" class="magnet">RIYA 2.0</h4>
             </a>
         </div>
         <div class="nryt">
-            <a class="home-btn magnet" href="#main">ʜᴏᴍᴇ</a>
-            <a href="#sec1" class="about-btn magnet">ᴀʙᴏᴜᴛ</a>
+            <a class="home-btn magnet" href="#main" onclick="toggleWidthnav(this)">ʜᴏᴍᴇ</a>
+
+            <a href="#sec1" class="about-btn magnet" onclick="toggleWidthnav(this)">ᴀʙᴏᴜᴛ</a>
         </div>
     </nav>
-
     <center>
         <div class="about-nav">
-            <a href="#sec1" class="wlcm magnet">ᴡᴇʟᴄᴏᴍᴇ</a>
-            <a href="#sec2" class="abt-chnl magnet">ᴄʜᴀɴɴᴇʟs</a>
-            <a href="#sec3" class="magnet bot-btn">ʙᴏᴛs</a>
-            <a href="#sec4" class="magnet contact-btn">ʟᴇᴛ's ᴛᴀʟᴋ</a>
+            <a href="#sec1" class="wlcm magnet" onclick="toggleWidth(this)">ᴡᴇʟᴄᴏᴍᴇ</a>
+            <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">ᴄʜᴀɴɴᴇʟs</a>
+            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">ʙᴏᴛs</a>
+            <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">ʟᴇᴛ's ᴛᴀʟᴋ</a>
         </div>
     </center>
+    <!-- this code is written by @biisal tg:biisal-files  -->
+    <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
 
     <div class="outer">
         <div class="inner">
             <div class="main" id="main">
-                <video id="player" class="player" src="{{file_url}}" type="video/mp4" playsinline controls width="100%"></video>
-                
+                <video id="player" class="player" src="{{file_url}}" type="video/mp4" playsinline controls
+                    width="100%"></video>
+                <div class="player"></div>
                 <div class="file-name">
-                    <h4>File name:</h4>
-                    <p>{{file_name}}</p>
+                    <h4>File name : </h4>
+                    <br>
+                    <p id="myDiv">{{file_name}}</p>
                 </div>
-
                 <div class="downloadBtn">
-                    <button class="magnet" onclick="vlc_player()">
-                        <img src="https://i.postimg.cc/15TQ4y7B/vlc.png" alt=""> Watch in VLC Player
-                    </button>
-                    <button class="magnet" onclick="mx_player()">
-                        <img src="https://i.postimg.cc/sx4Msv4T/mx.png" alt=""> Watch in MX Player
-                    </button>
-                    <button class="magnet" onclick="bisalDownload()">
-                        <img style="height: 35px;" src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt=""> Download Video
+                    <button class="magnet" onclick="vlc_player()"><img src="https://i.postimg.cc/15TQ4y7B/vlc.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴠʟᴄ ᴘʟᴀʏᴇʀ</button>
+                    <button class="magnet" onclick="mx_player()"><img src="https://i.postimg.cc/sx4Msv4T/mx.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴍx ᴘʟᴀʏᴇʀ</button>
+                    <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/RVGWYJFF/playit.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴘʟᴀʏɪᴛ
+                        ᴘʟᴀʏᴇʀ</button>
+                    <button class="magnet" onclick="km_player()"><img src="https://i.postimg.cc/wT9tFQ9Z/km.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ ᴋᴍ ᴘʟᴀʏᴇʀ</button>
+                    <button class="magnet" onclick="s_player()"><img src="https://i.postimg.cc/XYJr6NGg/s.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ s ᴘʟᴀʏᴇʀ</button>
+                    <button class="magnet" onclick="hd_player()"><img src="https://i.postimg.cc/rFT43LNh/hd.png"
+                            alt="">ᴡᴀᴛᴄʜ ɪɴ ʜᴅ
+                        ᴘʟᴀʏᴇʀ(4K)</button>
+                    <button class="magnet" onclick="bisalDownload()"><img style="height: 35px;"
+                            src="https://i.postimg.cc/Zncc9YLq/Pngtree-download-icon-3581467.png" alt="">ᴅᴏᴡɴʟᴏᴀᴅ ᴠɪᴅᴇᴏ
                     </button>
                 </div>
-            </div>
 
+            </div>
             <div class="abt">
                 <div class="about">
                     <div class="about-dets">
-                        <div class="abt-sec" id="sec1">
-                            <h1>ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ our <span>sᴛʀᴇᴀᴍɪɴɢ ᴡᴇʙsɪᴛᴇ</span></h1>
-                            <p>Enjoy an amazing entertainment experience.</p>
+                        <div class="abt-sec" id="sec1" style="padding: 160px 30px;">
+                            <h1 style="text-align: center;">ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ our               <Span>sᴛʀᴇᴀᴍɪɴɢ ᴡᴇʙsɪᴛᴇ</Span></h1>
+                            <p style="text-align: center; line-height: 2;word-spacing: 2px;  letter-spacing: 0.8px;">
+                                We're
+                                thrilled to have <span>you</span> here.
+                                Get ready for an
+                                amazing <span>experience</span>
+                                filled with <span>entertainment</span>, <span>fun</span>, and <span>surprises</span>.
+                                Grab
+                                your snacks, sit back, and <span>enjoy</span> the show !
+                            </p>
                         </div>
-
                         <div class="abt-sec" id="sec2">
-                            <h1>Our <span>Channels</span></h1>
+                            <h1>our all <span>ᴄʜᴀɴɴᴇʟs</span> ʟɪsᴛ</h1>
                             <div class="links chnl-link">
-                                <a href="https://t.me/RexieCatX_Bott"><button>RaxieCat X</button></a>
-                                <a href="https://t.me/maximize0"><button>NICK X</button></a>
+                                <a class="magnet" href="https://t.me/RexieCatX_Bott"><button>RaxieCat
+                                        x</button></a>
+                                <a class="magnet" href="https://t.me/RexieCatX_Bott"><button>sᴇʀɪᴇs
+                                        ғʟɪx</button></a>
+                                <a class="magnet" href="https://t.me/RexieCatX_Bott"><button>ᴀɴɪᴍᴇ
+                                        ᴄʀᴜɪsᴇ</button></a>
+                                <a class="magnet" href="https://t.me/RexieCatX_Bott"><button>ᴍᴏᴠɪᴇ
+                                         ɢʀᴏᴜᴘ</button></a>
+                                <a class="magnet" href="https://t.me/maximize0"><button>NICK
+                                        x</button></a>
                             </div>
                         </div>
-
                         <div class="abt-sec" id="sec3">
-                            <h1>Our <span>Bots</span></h1>
+                            <h1>our all <span>ʙᴏᴛs</span> ʟɪsᴛ</h1>
                             <div class="links bot-link">
-                                <a href="https://t.me/SpeedMovies_bot"><button>RIYA Auto Filter</button></a>
+                                <a class="magnet" href="https://t.me/SpeedMovies_bot"><button>RIYA ᴀᴜᴛᴏ ғɪʟᴛᴇʀ</button></a>
                             </div>
                         </div>
-
                         <div class="abt-sec" id="sec4">
-                            <p>You can <span>contact us</span> for support or to report issues via Telegram.</p>
+                            <!-- this code is written by @biisal tg:biisal-files  -->
+                            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
+
+                            <p style="text-align: center;">ʏᴏᴜ ᴄᴀɴ <Span> ᴛᴀʟᴋ</Span> ᴡɪᴛʜ ᴜs ғᴏʀ ʏᴏᴜʀ <Span>sᴜᴘᴘᴏʀᴛ</Span> ᴀɴᴅ ʏᴏᴜ ᴄᴀɴ  <Span>ʀᴇᴘᴏʀᴛ</Span> ᴛʜʀᴏᴜɢʜ
+                                ᴛᴇʟᴇɢʀᴀᴍ</p>
                             <div class="links contact">
-                                <a href="https://t.me/riyasupportt"><button>Contact Us</button></a>
+                                <a href="https://t.me/riyasupportt"><button>ᴄᴀɴᴛᴀᴄᴛ ᴜs</button></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <footer>
-                <div class="mid">
-                    <h1>Visit <a href="#sec3"><span>our bots</span></a> for more info</h1>
-                </div>
-
-                <div class="last-text">
-                    <p>Welcome to our online streaming platform. Enjoy easy, hassle-free file streaming.</p>
-                </div>
-
-                <div class="copyright">
-                    <h5>Copyright © 2025 <a href="https://t.me/maximize0">NICK</a>. All Rights Reserved.</h5>
-                    <div class="icons">
-                        <a href="https://t.me/RexieCatX_Bott"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://t.me/maximize0"><i class="fa-brands fa-telegram"></i></a>
-                    </div>
-                    <h4>Designed by <a href="https://t.me/maximize0">NICK</a></h4>
-                </div>
-            </footer>
         </div>
-    </div>
+        <footer>
+            <div class="mid">
+                <h1 class="mid-text">ᴠɪsɪᴛ <a href="#sec3" onclick="bot_btn_clicked()"><span>ᴏᴜʀ ʙᴏᴛs</span></a>
+                    FOR
+                    MORE
+                    INFO</h1>
+            </div>
 
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"></script>
-    <script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
-    <script src="https://aeditx03.github.io/resources/StreamJs.js"></script>
+            <div class="last-text">
+                <p class="text-center pb-20 pr-6 pl-6 absolute" style="font-weight: 500;">
+                    Welcome to our online streaming platform! Our website allows users to generate streamable links for
+                    various files using Telegram bot. Please note that we are not responsible for the content shared or
+                    streamed through our service. Users are encouraged to respect copyright laws and adhere to our
+                    community
+                    guidelines. Enjoy easy, hassle-free file streaming service.
+                </p>
+            </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            document.body.oncontextmenu = function () {
-                return false;
-            };
-        });
+            <!-- this code is written by @biisal tg:biisal-files  -->
+            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
 
-        new WOW().init();
-    </script>
+
+
+            <div class="copyright ">
+                <h5 class="text-center">Copyright © 2025 <a href="https://t.me/maximize0"><span
+                            style="font-weight: 700;">NICK</span></a>. All
+                    Rights Reserved.</h5>
+                <div class="icons">
+                    <a href="https://t.me/RexieCatX_Bott"><i class="fa-brands fa-github fa-lg"></i></a>
+                    <a href="https://t.me/maximize0"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                </div>
+                <h4 style="font-weight: 700;">This Page Is Designed By <a
+                        href="https://t.me/maximize0"><span>NICK</span></a></h4>
+            </div>
+        </footer>
 </body>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const uncopyableElement = document.querySelector(".uncopyable");
+
+        uncopyableElement.addEventListener("selectstart", function (event) {
+            event.preventDefault();
+        });
+    });
+</script>
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
+<script src="https://cdn.plyr.io/3.6.9/plyr.js"></script>
+<script src="https://aeditx03.github.io/resources/StreamJs.js"></script>
+
 </html>
+
+<!-- this code is written by @biisal tg:biisal-files  -->
+<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.instead  -->
